--- a/reference-links.html
+++ b/reference-links.html
@@ -251,12 +251,21 @@
 
 <div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 900px; width: 100%; margin: auto; padding: 20px; background-color: #ffffff; color: #333; line-height: 1.6; box-sizing: border-box;">
 
-  <div style="text-align: center; margin-bottom: 50px;">
-    <h2 style="font-size: 18px; color: #0c2340; border-bottom: 3px solid #0c2340; padding-bottom: 15px; display: inline-block; text-transform: uppercase; letter-spacing: 2px;">
+  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 12px; margin-bottom: 50px;">
+    <h2 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 700; letter-spacing: 0.3px; text-transform: uppercase;">
       References & Career Data Credentials
     </h2>
-    <p style="color: #666; font-size: 14px; margin-top: 10px;">Comprehensive archive of official tournament results, rankings, and media reports.</p>
+    <div style="display: flex; justify-content: space-between; align-items: flex-end; flex-wrap: wrap; gap: 8px; margin-top: 8px;">
+      <p style="margin: 0; color: #666; font-size: 14px; flex-shrink: 0;">
+        Comprehensive archive of official tournament results, rankings, and media reports.
+      </p>
+      <p style="margin: 0; color: #94a3b8; font-size: 12px; font-weight: 600; font-family: 'Segoe UI', sans-serif;">
+        Last update: Feb 19, 2026
+      </p>
+    </div>
   </div>
+
+</div>
 
   
 
