--- a/reference-links.html
+++ b/reference-links.html
@@ -249,17 +249,17 @@
 
   
 
-<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 900px; width: 100%; margin: auto; padding: 20px; background-color: #ffffff; color: #333; line-height: 1.6; box-sizing: border-box;">
+<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 900px; width: 100%; margin: 0 auto 50px auto; padding: 0; background-color: #ffffff; color: #333; line-height: 1.6; box-sizing: border-box; display: block; clear: both;">
 
-  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 12px; margin-bottom: 50px;">
-    <h2 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 700; letter-spacing: 0.3px; text-transform: uppercase;">
+  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 12px; width: 100%; box-sizing: border-box;">
+    <h2 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 700; letter-spacing: 0.3px; text-transform: uppercase; text-align: left;">
       References & Career Data Credentials
     </h2>
-    <div style="display: flex; justify-content: space-between; align-items: flex-end; flex-wrap: wrap; gap: 8px; margin-top: 8px;">
-      <p style="margin: 0; color: #666; font-size: 14px; flex-shrink: 0;">
+    <div style="display: flex; justify-content: space-between; align-items: flex-end; flex-wrap: wrap; gap: 8px; margin-top: 8px; width: 100%;">
+      <p style="margin: 0; color: #666; font-size: 14px; flex-shrink: 0; text-align: left;">
         Comprehensive archive of official tournament results, rankings, and media reports.
       </p>
-      <p style="margin: 0; color: #94a3b8; font-size: 12px; font-weight: 600; font-family: 'Segoe UI', sans-serif;">
+      <p style="margin: 0; color: #94a3b8; font-size: 12px; font-weight: 600; font-family: 'Segoe UI', sans-serif; white-space: nowrap;">
         Last update: Feb 19, 2026
       </p>
     </div>
