--- a/test-1.html
+++ b/test-1.html
@@ -288,7 +288,7 @@
       <div style="padding: 25px 25px 15px 25px;">
         <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 20px; padding-bottom: 10px; border-bottom: 2px solid #e0e0e0;">
           <div style="width: 4px; height: 16px; background-color: #1565c0; border-radius: 2px;"></div>
-          <span style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: 0.5px; text-transform: uppercase;">Amateur Events</span>
+          <span style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: 0.5px; text-transform: uppercase;">Amateur Events (WAGR)</span>
         </div>
 
         <div style="margin-bottom: 10px; padding-bottom: 15px;">
@@ -317,18 +317,16 @@
       </div>
 
       <div style="padding: 10px 25px 25px 25px; background-color: #f8fafc; border-top: 1px solid #eee;">
-        <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 18px; margin-top: 10px; padding-left: 5px;">
-          <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-            <polyline points="20 6 9 17 4 12"></polyline>
-          </svg>
-          <span style="color: #0c2340; font-weight: 800; font-size: 16px;">NCAA Official Scoreboards (Clippd)</span>
+        <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 20px; margin-top: 10px; padding-bottom: 10px; border-bottom: 2px solid #e0e0e0;">
+          <div style="width: 4px; height: 16px; background-color: #F15A22; border-radius: 2px;"></div>
+          <span style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: 0.5px; text-transform: uppercase;">NCAA Official Scoreboards by Clippd</span>
         </div>
         
         <div style="display: flex; flex-direction: column; gap: 1px; padding-left: 2px;">
           
           <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/player" target="_blank" style="display: flex; align-items: center; justify-content: space-between; padding: 10px 12px; text-decoration: none; border-radius: 6px; transition: background 0.2s;" onmouseover="this.style.backgroundColor='#ffffff'; this.style.boxShadow='0 2px 5px rgba(0,0,0,0.05)'" onmouseout="this.style.backgroundColor='transparent'; this.style.boxShadow='none'">
             <div style="display: flex; align-items: center;">
-              <span style="color: #806600; margin-right: 12px; font-size: 14px;">•</span>
+              <span style="color: #F15A22; margin-right: 12px; font-size: 14px;">•</span>
               <span style="color: #0c2340; font-size: 14px; font-weight: 900;">Compadres Collegiate (UTRGV)</span>
               <span style="margin-left: 10px; background-color: #0c2340; color: white; font-size: 9px; font-weight: 800; padding: 2px 6px; border-radius: 3px; letter-spacing: 0.3px; text-transform: uppercase;">2026 Spring Opener</span>
               <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 8px;"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
@@ -338,7 +336,7 @@
 
           <a href="https://scoreboard.clippd.com/tournaments/239449/scoring/player" target="_blank" style="display: flex; align-items: center; justify-content: space-between; padding: 10px 12px; text-decoration: none; border-radius: 6px; transition: background 0.2s;" onmouseover="this.style.backgroundColor='#ffffff'; this.style.boxShadow='0 2px 5px rgba(0,0,0,0.05)'" onmouseout="this.style.backgroundColor='transparent'; this.style.boxShadow='none'">
             <div style="display: flex; align-items: center;">
-              <span style="color: #806600; margin-right: 12px; font-size: 14px;">•</span>
+              <span style="color: #F15A22; margin-right: 12px; font-size: 14px;">•</span>
               <span style="color: #334155; font-size: 14px; font-weight: 600;">Trinity Forest Invitational</span>
               <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 8px;"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
             </div>
@@ -347,7 +345,7 @@
 
           <a href="https://scoreboard.clippd.com/tournaments/236150/scoring/player" target="_blank" style="display: flex; align-items: center; justify-content: space-between; padding: 10px 12px; text-decoration: none; border-radius: 6px; transition: background 0.2s;" onmouseover="this.style.backgroundColor='#ffffff'; this.style.boxShadow='0 2px 5px rgba(0,0,0,0.05)'" onmouseout="this.style.backgroundColor='transparent'; this.style.boxShadow='none'">
             <div style="display: flex; align-items: center;">
-              <span style="color: #806600; margin-right: 12px; font-size: 14px;">•</span>
+              <span style="color: #F15A22; margin-right: 12px; font-size: 14px;">•</span>
               <span style="color: #334155; font-size: 14px; font-weight: 600;">Badger Invitational</span>
               <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 8px;"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
             </div>
@@ -356,7 +354,7 @@
 
           <a href="https://scoreboard.clippd.com/tournaments/239590/scoring/player" target="_blank" style="display: flex; align-items: center; justify-content: space-between; padding: 10px 12px; text-decoration: none; border-radius: 6px; transition: background 0.2s;" onmouseover="this.style.backgroundColor='#ffffff'; this.style.boxShadow='0 2px 5px rgba(0,0,0,0.05)'" onmouseout="this.style.backgroundColor='transparent'; this.style.boxShadow='none'">
             <div style="display: flex; align-items: center;">
-              <span style="color: #806600; margin-right: 12px; font-size: 14px;">•</span>
+              <span style="color: #F15A22; margin-right: 12px; font-size: 14px;">•</span>
               <span style="color: #334155; font-size: 14px; font-weight: 600;">Highlands Invitational</span>
               <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 8px;"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
             </div>
@@ -365,7 +363,7 @@
 
           <a href="https://scoreboard.clippd.com/tournaments/239222/scoring/player" target="_blank" style="display: flex; align-items: center; justify-content: space-between; padding: 10px 12px; text-decoration: none; border-radius: 6px; transition: background 0.2s;" onmouseover="this.style.backgroundColor='#ffffff'; this.style.boxShadow='0 2px 5px rgba(0,0,0,0.05)'" onmouseout="this.style.backgroundColor='transparent'; this.style.boxShadow='none'">
             <div style="display: flex; align-items: center;">
-              <span style="color: #806600; margin-right: 12px; font-size: 14px;">•</span>
+              <span style="color: #F15A22; margin-right: 12px; font-size: 14px;">•</span>
               <span style="color: #0c2340; font-size: 14px; font-weight: 900;">Argent Financial Classic</span>
               <span style="margin-left: 10px; background-color: #0c2340; color: white; font-size: 9px; font-weight: 800; padding: 2px 6px; border-radius: 3px; letter-spacing: 0.3px; text-transform: uppercase;">College Debut</span>
               <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 8px;"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
