--- a/test-1.html
+++ b/test-1.html
@@ -248,8 +248,9 @@
 </div>
 
   
+<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 900px; width: 100%; margin: auto; padding: 20px; background-color: #ffffff; color: #333; line-height: 1.6; box-sizing: border-box;">
 
-<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 900px; width: 100%; margin: 0 auto 20px auto; padding: 0; box-sizing: border-box;">
+  <div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 900px; width: 100%; margin: 0 auto 20px auto; padding: 0; box-sizing: border-box;">
   <div style="border: 1px solid #e0e0e0; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.03); background-color: #ffffff; padding: 30px 20px; text-align: center;">
     <h2 style="font-size: 18px; color: #0c2340; border-bottom: 3px solid #0c2340; padding-bottom: 15px; display: inline-block; text-transform: uppercase; letter-spacing: 2px; margin: 0;">
       References & Career Data Credentials
