--- a/test-1.html
+++ b/test-1.html
@@ -264,8 +264,8 @@
         Comprehensive archive of official tournament results, rankings, and media reports.
       </p>
       
-      <div style="margin-top: 12px; display: flex; align-items: center; gap: 8px;">
-        <div style="width: 8px; height: 8px; background-color: #94a3b8; border-radius: 50%;"></div>
+      <div style="width: 100%; margin-top: 15px; display: flex; align-items: center; justify-content: flex-end; gap: 8px;">
+        <div style="width: 6px; height: 6px; background-color: #94a3b8; border-radius: 50%;"></div>
         <p style="color: #94a3b8; font-size: 11px; margin: 0; font-weight: 700; letter-spacing: 0.5px; text-transform: uppercase;">
           Last Updated: Feb 19, 2026
         </p>
