--- a/test-1.html
+++ b/test-1.html
@@ -264,8 +264,7 @@
         Comprehensive archive of official tournament results, rankings, and media reports.
       </p>
       
-      <div style="width: 100%; margin-top: 15px; display: flex; align-items: center; justify-content: flex-end; gap: 8px;">
-        <div style="width: 6px; height: 6px; background-color: #94a3b8; border-radius: 50%;"></div>
+      <div style="width: 100%; margin-top: 15px; display: flex; align-items: center; justify-content: flex-end; gap: 0;">
         <p style="color: #94a3b8; font-size: 11px; margin: 0; font-weight: 700; letter-spacing: 0.5px; text-transform: uppercase;">
           Last Updated: Feb 19, 2026
         </p>
@@ -273,6 +272,7 @@
     </div>
   </div>
 </div>
+  
 
 <div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 900px; width: 100%; margin: 0 auto 30px auto; padding: 0; box-sizing: border-box; clear: both;">
   <div style="border: 1px solid #e0e0e0; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.03); width: 100%; box-sizing: border-box;">
