--- a/test-1.html
+++ b/test-1.html
@@ -309,7 +309,7 @@
           <div style="padding-left: 29px; display: flex; align-items: center; flex-wrap: wrap; gap: 0;">
             <a href="https://www.golfgenius.com/pages/5776911" target="_blank" style="color: #1565c0; font-size: 13px; font-weight: bold; text-decoration: none; border-bottom: 1px solid #1565c0; display: inline-flex; align-items: center;">
               <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 6px;"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-              Live Leaderboard
+              Final Leaderboard
             </a>
             <span style="margin: 0 10px; color: #ccc;">|</span>
             <a href="https://patriotallamerica.com/players/patriot_players-men/" target="_blank" style="color: #1565c0; font-size: 13px; text-decoration: none; border-bottom: 1px solid #1565c0; display: inline-flex; align-items: center;">
