--- a/test-1.html
+++ b/test-1.html
@@ -299,28 +299,33 @@
         </div>
 
         <div style="margin-bottom: 10px; padding-bottom: 15px;">
-          <div style="display: flex; align-items: flex-start; justify-content: flex-start; flex-wrap: wrap; gap: 10px; margin-bottom: 12px; padding-left: 5px;">
-            <div style="display: flex; align-items: center; gap: 10px;">
-              <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;">
-                <polyline points="20 6 9 17 4 12"></polyline>
-              </svg>
-              <span style="color: #0c2340; font-weight: 800; font-size: 16px;">Patriot All-America Invitational</span>
-            </div>
-            <span style="color: #94a3b8; font-family: 'Segoe UI', sans-serif; font-size: 12px; font-weight: 600; letter-spacing: 0.5px; background: #f1f5f9; padding: 4px 10px; border-radius: 4px; white-space: nowrap;">DEC 29-31, 2025</span>
-          </div>
+  <div style="display: flex; flex-direction: column; gap: 8px; margin-bottom: 12px; padding-left: 5px;">
+    
+    <div style="display: flex; align-items: center; gap: 10px;">
+      <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;">
+        <polyline points="20 6 9 17 4 12"></polyline>
+      </svg>
+      <span style="color: #0c2340; font-weight: 800; font-size: 16px; line-height: 1.2;">Patriot All-America Invitational</span>
+    </div>
 
-          <div style="padding-left: 29px; display: flex; align-items: center; flex-wrap: wrap; gap: 0;">
-            <a href="https://www.golfgenius.com/pages/5776911" target="_blank" style="color: #1565c0; font-size: 13px; font-weight: bold; text-decoration: none; border-bottom: 1px solid #1565c0; display: inline-flex; align-items: center;">
-              <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 6px;"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-              Final Leaderboard
-            </a>
-            <span style="margin: 0 10px; color: #ccc;">|</span>
-            <a href="https://patriotallamerica.com/players/patriot_players-men/" target="_blank" style="color: #1565c0; font-size: 13px; text-decoration: none; border-bottom: 1px solid #1565c0; display: inline-flex; align-items: center;">
-              <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 6px;"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
-              Official Player Profile
-            </a>
-          </div>
-        </div>
+    <div style="padding-left: 24px;">
+      <span style="color: #94a3b8; font-family: 'Segoe UI', sans-serif; font-size: 12px; font-weight: 600; letter-spacing: 0.5px; background: #f1f5f9; padding: 4px 10px; border-radius: 4px; white-space: nowrap; display: inline-block;">DEC 29-31, 2025</span>
+    </div>
+  </div>
+
+  <div style="padding-left: 29px; display: flex; align-items: center; flex-wrap: wrap; gap: 0;">
+    <a href="https://www.golfgenius.com/pages/5776911" target="_blank" style="color: #1565c0; font-size: 13px; font-weight: bold; text-decoration: none; border-bottom: 1px solid #1565c0; display: inline-flex; align-items: center;">
+      <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 6px;"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
+      Final Leaderboard
+    </a>
+    <span style="margin: 0 10px; color: #ccc;">|</span>
+    <a href="https://patriotallamerica.com/players/patriot_players-men/" target="_blank" style="color: #1565c0; font-size: 13px; text-decoration: none; border-bottom: 1px solid #1565c0; display: inline-flex; align-items: center;">
+      <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 6px;"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+      Official Player Profile
+    </a>
+  </div>
+</div>
+        
       </div>
 
       <div style="padding: 10px 25px 25px 25px; background-color: #f8fafc; border-top: 1px solid #eee;">
