--- a/reference-links.html
+++ b/reference-links.html
@@ -298,17 +298,17 @@
           <span style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: 0.5px; text-transform: uppercase;">Amateur Events (WAGR)</span>
         </div>
 
-        <div style="margin-bottom: 10px; padding-bottom: 15px;">
-  <div style="display: flex; flex-direction: column; gap: 8px; margin-bottom: 12px; padding-left: 5px;">
+ <div style="margin-bottom: 10px; padding-bottom: 15px;">
+    <div style="display: flex; align-items: flex-start; justify-content: space-between; flex-wrap: wrap; gap: 10px; margin-bottom: 12px; padding-left: 5px;">
     
-    <div style="display: flex; align-items: center; gap: 10px;">
-      <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;">
+      <div style="display: flex; align-items: center; gap: 10px; flex-shrink: 0;">
+        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;">
         <polyline points="20 6 9 17 4 12"></polyline>
-      </svg>
+        </svg>
       <span style="color: #0c2340; font-weight: 800; font-size: 16px; line-height: 1.2;">Patriot All-America Invitational</span>
     </div>
 
-    <div style="padding-left: 24px;">
+    <div style="flex-grow: 1; display: flex; justify-content: flex-end; min-width: fit-content; margin-left: 24px;">
       <span style="color: #94a3b8; font-family: 'Segoe UI', sans-serif; font-size: 12px; font-weight: 600; letter-spacing: 0.5px; background: #f1f5f9; padding: 4px 10px; border-radius: 4px; white-space: nowrap; display: inline-block;">DEC 29-31, 2025</span>
     </div>
   </div>
