--- a/reference-links.html
+++ b/reference-links.html
@@ -298,22 +298,23 @@
           <span style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: 0.5px; text-transform: uppercase;">Amateur Events (WAGR)</span>
         </div>
 
- <div style="margin-bottom: 10px; padding-bottom: 15px;">
-    <div style="display: flex; align-items: flex-start; justify-content: space-between; flex-wrap: wrap; gap: 10px; margin-bottom: 12px; padding-left: 5px;">
+<div style="margin-bottom: 10px; padding-bottom: 15px; font-family: 'Segoe UI', sans-serif;">
+  <div style="margin-bottom: 12px; padding-left: 5px; overflow: hidden;">
     
-      <div style="display: flex; align-items: center; gap: 10px; flex-shrink: 0;">
-        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;">
+    <div style="float: right; margin-left: 24px; margin-bottom: 8px;">
+      <span style="color: #94a3b8; font-size: 12px; font-weight: 600; letter-spacing: 0.5px; background: #f1f5f9; padding: 4px 10px; border-radius: 4px; white-space: nowrap; display: inline-block; vertical-align: middle;">DEC 29-31, 2025</span>
+    </div>
+
+    <div style="display: flex; align-items: center; gap: 10px;">
+      <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;">
         <polyline points="20 6 9 17 4 12"></polyline>
-        </svg>
+      </svg>
       <span style="color: #0c2340; font-weight: 800; font-size: 16px; line-height: 1.2;">Patriot All-America Invitational</span>
     </div>
 
-    <div style="flex-grow: 1; display: flex; justify-content: flex-end; min-width: fit-content; margin-left: 24px;">
-      <span style="color: #94a3b8; font-family: 'Segoe UI', sans-serif; font-size: 12px; font-weight: 600; letter-spacing: 0.5px; background: #f1f5f9; padding: 4px 10px; border-radius: 4px; white-space: nowrap; display: inline-block;">DEC 29-31, 2025</span>
-    </div>
   </div>
 
-  <div style="padding-left: 29px; display: flex; align-items: center; flex-wrap: wrap; gap: 0;">
+  <div style="padding-left: 29px; display: flex; align-items: center; flex-wrap: wrap; gap: 0; clear: both;">
     <a href="https://www.golfgenius.com/pages/5776911" target="_blank" style="color: #1565c0; font-size: 13px; font-weight: bold; text-decoration: none; border-bottom: 1px solid #1565c0; display: inline-flex; align-items: center;">
       <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="margin-right: 6px;"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
       Final Leaderboard
