--- a/test-1.html
+++ b/test-1.html
@@ -251,8 +251,8 @@
 
   
 
-  <div style="font-family: 'Segoe UI', Arial, sans-serif; max-width: 850px; width: 100%; margin: auto; padding: 20px; color: #333; background-color: #ffffff; box-sizing: border-box;">
-    
+  <div style="font-family: 'Segoe UI', Arial, sans-serif; max-width: 850px; width: 100%; margin: auto; padding: 15px; color: #333; background-color: #ffffff; box-sizing: border-box;">
+  <div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; max-width: 900px; width: 100%; margin: 0 auto 20px auto; padding: 0; box-sizing: border-box; clear: both;">  
   
   <div style="border: 1px solid #e0e0e0; border-left: 5px solid #0c2340; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.03); background-color: #ffffff; padding: 25px 30px; position: relative;">
     <div style="position: absolute; top: 0; right: 0; width: 40px; height: 4px; background-color: #F15A22;"></div>
@@ -525,7 +525,7 @@
 
 <div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 10px 0;">
 
-<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 0 20px;">
+<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 0 10px;">
 
   <div id="junior-period" style="max-width: 800px; margin: 0 auto 50px auto; padding: 0;">
     
