--- a/test-1.html
+++ b/test-1.html
@@ -529,9 +529,9 @@
 
   <div id="junior-period" style="max-width: 800px; margin: 0 auto 50px auto; padding: 0;">
     
-    <h4 style="color: #0c2340; font-size: 16px; margin: 30px 0 15px 0; font-weight: 800; letter-spacing: -0.3px; display: flex; align-items: center; border-left: 5px solid #15803d; padding-left: 10px;">
-      JUNIOR GOLF YEARS
-    </h4>
+    <h4 style="color: #0c2340; font-size: 16px; margin: 30px 0 15px 0; font-weight: 800; letter-spacing: -0.3px; display: flex; align-items: center; border-left: 5px solid #15803d; padding: 0 10px;">
+  JUNIOR GOLF YEARS
+</h4>
 
     <div style="display: flex; flex-direction: column; gap: 12px;">
       
