--- a/code/index-upcoming-ready.html
+++ b/code/index-upcoming-ready.html
@@ -485,7 +485,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         </h2>
       </div>
       <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
-        Last Updated: Feb. 18, 2026
+        Last Updated: Feb 18, 2026
       </div>
     </div>
     <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px;"></div>
