--- a/code/ncaa-up-coming-ready.html
+++ b/code/ncaa-up-coming-ready.html
@@ -529,7 +529,7 @@
         UPCOMING
       </div>
       <div>
-        <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Military Collegiate (UTSA) | Feb. 23-24</h2>
+        <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Military Collegiate (UTSA) | Feb 23-24</h2>
         <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">TPC San Antonio | The Canyons Course | Par 72 | 7,106 Yards | Rating: 74.5 | Slope: 139</div>
       </div>
     </div> 
