--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -347,7 +347,7 @@
   </h1>
   
   <span style="color: #64748b; font-size: 12px; font-weight: 700; letter-spacing: 0.5px; padding-bottom: 2px; white-space: nowrap;">
-    Last Updated: Feb 18, 2026
+    Last Updated: Feb 19, 2026
   </span>
 </div>
 
@@ -727,7 +727,7 @@
 
   <div id="Current-Focus" style="margin-top: 12px; box-sizing: border-box; text-align: center;">
     <span style="font-size: 13px; color: #d32f2f; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">
-      Posted: Feb 17, 2026
+      Posted On: Feb 17, 2026
     </span>
   </div>
 </div>
