--- a/test-1.html
+++ b/test-1.html
@@ -1237,7 +1237,7 @@
 </div>
   
 
-<div style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div style="max-width: 900px; margin: 0 auto 40px; padding: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <div style="display: flex; align-items: center; margin-bottom: 20px; border-left: 6px solid #c98a2e; padding-left: 15px;">
     <h4 style="margin: 0; color: #c98a2e; font-size: 20px; font-weight: 800; letter-spacing: 0.5px;">Off-Season Competition Plan / EAGS, USGA, FMG Events</h4>
