--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       <img src="https://drive.google.com/thumbnail?id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI&sz=w1200" 
            style="width: 100%; display: block; object-fit: cover; aspect-ratio: 16 / 9; object-position: center 20%;" 
            alt="Joshua Hong at TPC San Antonio team practice facility"
+           title="Joshua Hong at TPC San Antonio team practice facility"
            fetchpriority="high"
            decoding="sync">
       
