--- a/code/index-upcoming-ready.html
+++ b/code/index-upcoming-ready.html
@@ -262,7 +262,10 @@ gtag('config', 'G-H1JW8YBDZ8');
     <a href="https://drive.google.com/uc?export=view&id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI" target="_blank" style="display:block; text-decoration: none;">
       <img src="https://drive.google.com/thumbnail?id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI&sz=w1200" 
            style="width: 100%; display: block; object-fit: cover; aspect-ratio: 16 / 9; object-position: center 20%;" 
-           alt="Joshua Hong Performance">
+           alt="Joshua Hong at TPC San Antonio team practice facility"
+           title="Joshua Hong at the TPC San Antonio team practice green"
+           fetchpriority="high"
+           decoding="sync">
       
       <div style="position: absolute; bottom: 0; left: 0; right: 0; height: 30%; background: linear-gradient(to top, rgba(0,0,0,0.2), transparent); pointer-events: none;"></div>
     </a>
@@ -485,7 +488,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         </h2>
       </div>
       <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
-        Last Updated: Feb 19, 2026
+        Last Updated: Feb 20, 2026
       </div>
     </div>
     <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px;"></div>
