--- a/junior-career.html
+++ b/junior-career.html
@@ -246,12 +246,15 @@
     </p>
   </div>
 
-  <div style="width: 100%; margin-bottom: 50px; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.15); background-color: #f0f0f0;">
-    <img src="https://drive.google.com/thumbnail?id=1ypFBHakwo3qKDA1hjG1U9Bqdr9Tg2KME&sz=w1200" 
-         style="width: 100%; display: block; object-fit: cover; aspect-ratio: 16/9; object-position: center 20%;" 
-         alt="Joshua Hong Junior Career"
-         onerror="this.src='https://drive.google.com/uc?export=view&id=1ypFBHakwo3qKDA1hjG1U9Bqdr9Tg2KME';">
-  </div>
+<div style="width: 100%; margin-bottom: 50px; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.15); background-color: #f0f0f0;">
+  <img src="https://drive.google.com/thumbnail?id=1ypFBHakwo3qKDA1hjG1U9Bqdr9Tg2KME&sz=w1200" 
+       style="width: 100%; display: block; object-fit: cover; aspect-ratio: 16/9; object-position: center 20%;" 
+       alt="Joshua Hong at the 2025 Copa Sur Champion organized by FMG, Club Campestre de Puebla"
+       title="Joshua Hong at the 2025 Copa Sur Champion organized by FMG, Club Campestre de Puebla"
+       fetchpriority="high"
+       decoding="sync"
+       onerror="this.src='https://drive.google.com/uc?export=view&id=1ypFBHakwo3qKDA1hjG1U9Bqdr9Tg2KME';">
+</div>
 
 </div>
 
@@ -583,22 +586,22 @@
 </div>
 
      <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px;">
-      <img src="https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR" onclick="popupJrGallery(0)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/1IqCMgvk7V8AuhkJhJnGqYaV39tvOllUM" onclick="popupJrGallery(1)" style="width:100%; height:120px; object-fit:cover; object-position:center 15%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP" onclick="popupJrGallery(2)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV" onclick="popupJrGallery(3)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="https://lh3.googleusercontent.com/d/1wQUkMMPZRWKAcV3s7bH3lXIUHO7KQcPU" onclick="popupJrGallery(4)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z" onclick="popupJrGallery(5)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc" onclick="popupJrGallery(6)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ" onclick="popupJrGallery(7)" style="width:100%; height:120px; object-fit:cover; object-position:left 5%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH" onclick="popupJrGallery(8)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_" onclick="popupJrGallery(9)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1pjez52n31-EtRUIzEi5SROgefsmGSvdo" onclick="popupJrGallery(10)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1_pCv0hofMD4NffVsKXF-_9QfY_hqG_mC" onclick="popupJrGallery(11)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1Qc_Pv8gsFBae-bMk3Eudo5EnguKnP8Mg" onclick="popupJrGallery(12)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1yk8kSpHTCxGa725r_2eUEcoRmMgLvi2V" onclick="popupJrGallery(13)" style="width:100%; height:120px; object-fit:cover; object-position:center 25%; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1fG3zb436wgqA5OzjEiqzUyoSSnqJtEP2" onclick="popupJrGallery(14)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
-      <img src="https://lh3.googleusercontent.com/d/1ZSkAybCXpbResui5UyzkslKxn1ewbcnH" onclick="popupJrGallery(15)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;">
+      <img src="https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR" onclick="popupJrGallery(0)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Junior Career Image 9" title="Joshua Hong Junior Career Image 9" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1IqCMgvk7V8AuhkJhJnGqYaV39tvOllUM" onclick="popupJrGallery(1)" style="width:100%; height:120px; object-fit:cover; object-position:center 15%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Junior Career Image 10" title="Joshua Hong Junior Career Image 10" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP" onclick="popupJrGallery(2)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Junior Career Image 11" title="Joshua Hong Junior Career Image 11" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV" onclick="popupJrGallery(3)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Junior Career Image 12" title="Joshua Hong Junior Career Image 12" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1wQUkMMPZRWKAcV3s7bH3lXIUHO7KQcPU" onclick="popupJrGallery(4)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 13" title="Joshua Hong Junior Career Image 13" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z" onclick="popupJrGallery(5)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 14" title="Joshua Hong Junior Career Image 14" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc" onclick="popupJrGallery(6)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 15" title="Joshua Hong Junior Career Image 15" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ" onclick="popupJrGallery(7)" style="width:100%; height:120px; object-fit:cover; object-position:left 5%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 16" title="Joshua Hong Junior Career Image 16" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH" onclick="popupJrGallery(8)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 17" title="Joshua Hong Junior Career Image 17" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_" onclick="popupJrGallery(9)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 18" title="Joshua Hong Junior Career Image 18" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1pjez52n31-EtRUIzEi5SROgefsmGSvdo" onclick="popupJrGallery(10)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 19" title="Joshua Hong Junior Career Image 19" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1_pCv0hofMD4NffVsKXF-_9QfY_hqG_mC" onclick="popupJrGallery(11)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 20" title="Joshua Hong Junior Career Image 20" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1Qc_Pv8gsFBae-bMk3Eudo5EnguKnP8Mg" onclick="popupJrGallery(12)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 21" title="Joshua Hong Junior Career Image 21" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1yk8kSpHTCxGa725r_2eUEcoRmMgLvi2V" onclick="popupJrGallery(13)" style="width:100%; height:120px; object-fit:cover; object-position:center 25%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 22" title="Joshua Hong Junior Career Image 22" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1fG3zb436wgqA5OzjEiqzUyoSSnqJtEP2" onclick="popupJrGallery(14)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 23" title="Joshua Hong Junior Career Image 23" loading="lazy" decoding="async">
+      <img src="https://lh3.googleusercontent.com/d/1ZSkAybCXpbResui5UyzkslKxn1ewbcnH" onclick="popupJrGallery(15)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 24" title="Joshua Hong Junior Career Image 24" loading="lazy" decoding="async">
     </div>
 
   <script>
