--- a/reference-links.html
+++ b/reference-links.html
@@ -332,7 +332,7 @@
       <div style="padding: 10px 25px 25px 25px; background-color: #f8fafc; border-top: 1px solid #eee;">
         <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 20px; margin-top: 10px; padding-bottom: 10px; border-bottom: 2px solid #e0e0e0;">
           <div style="width: 4px; height: 16px; background-color: #F15A22; border-radius: 2px;"></div>
-          <span style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: 0.5px; text-transform: uppercase;">NCAA Official Scoreboards by Clippd</span>
+          <span style="color: #0c2340; font-weight: 800; font-size: 14px; letter-spacing: 0.5px; text-transform: uppercase;">NCAA Official (Scoreboard by Clippd)</span>
         </div>
         
         <div style="display: flex; flex-direction: column; gap: 1px; padding-left: 2px;">
