--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         </div>
         <div>
           <div style="display: flex; align-items: baseline; gap: 6px;">
-            <span style="color: #0c2340; font-weight: 900; font-size: 17px;">Military Collegiate</span>
+            <span style="color: #0c2340; font-weight: 900; font-size: 17px;">Military City  Collegiate</span>
             <span style="color: #94a3b8; font-size: 11px; font-weight: 700;">(Feb 23-24)</span>
           </div>
           <span style="color: #64748b; font-size: 12px; font-weight: 600;">San Antonio, Texas / TPC San Antonio - Canyons</span>
@@ -591,9 +591,9 @@ gtag('config', 'G-H1JW8YBDZ8');
           <div style="background: #c98a2e; color: white; padding: 5px 15px; border-radius: 0 0 10px 10px; font-size: 11px; font-weight: 800; position: absolute; top: 0; left: 25px; letter-spacing: 1px; box-shadow: 0 2px 5px rgba(201,138,46,0.2);">UPCOMING</div>
           
           <h3 style="font-size: 22px; margin: 20px 0 8px 0; color: #0c2340; font-weight: 800; line-height: 1.2; display: flex; align-items: center; gap: 8px;">
-            Military City Collegiate
+            Military City  City Collegiate
             <object>
-              <a href="https://goutsa.com/2026-military-city-collegiate" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
+              <a href="https://goutsa.com/2026-Military City -city-collegiate" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="cursor: pointer;">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                   <polyline points="15 3 21 3 21 9"></polyline>
