--- a/code/ncaa-up-coming-ready.html
+++ b/code/ncaa-up-coming-ready.html
@@ -363,7 +363,7 @@
     
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-left: 5px solid #E31837; padding-left: 20px; margin-left: 0;">
       <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">UPCOMING TOURNAMENT</h3>
-      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">6th Event: Military Collegiate | Home Field</span>
+      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">6th Event: Military City  Collegiate | Home Field</span>
     </div>
   </div>
 </div>
@@ -532,7 +532,7 @@
         UPCOMING
       </div>
       <div>
-        <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Military Collegiate (UTSA) | Feb 23-24</h2>
+        <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Military City  Collegiate (UTSA) | Feb 23-24</h2>
         <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">TPC San Antonio | The Canyons Course | Par 72 | 7,106 Yards | Rating: 74.5 | Slope: 139</div>
       </div>
     </div> 
@@ -773,7 +773,7 @@
                 </div>
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
-                        • Military City Collegiate (Feb 23–24, TPC San Antonio)<br>
+                        • Military City  City Collegiate (Feb 23–24, TPC San Antonio)<br>
                         • March Event (Mar 2–3, 4-day interval)<br>
                         • Course Preparation: Home-course management patterns reviewed.
                     </p>
@@ -1035,7 +1035,7 @@
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px; color: #333;">Feb 23-24, 2026</div>
               <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 6px;">
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Military City Collegiate (UTSA)</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Military City  City Collegiate (UTSA)</div>
                <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/participants" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
@@ -2029,7 +2029,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       <div id="thumbScroll">
         
 <div class="thumb-page">
-  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Military-Collegiate-poster.jpg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA Men's Golf 2026 Military Collegiate Poster" title="Joshua Hong UTSA Men's Golf 2026 Military Collegiate Poster" loading="lazy" decoding="async">
+  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Military City -Collegiate-poster.jpg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA Men's Golf 2026 Military City  Collegiate Poster" title="Joshua Hong UTSA Men's Golf 2026 Military City  Collegiate Poster" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-Result-utrgv.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA Men's Golf 2026 Spring Opener Results at UTRGV" title="Joshua Hong UTSA Men's Golf 2026 Spring Opener Results at UTRGV" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r3-71.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA 2026 Spring Opener UTRGV Round 3 Score 71" title="Joshua Hong UTSA 2026 Spring Opener UTRGV Round 3 Score 71" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-2026-Spring-Opner-UTRGV-r1-70.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA 2026 Spring Opener UTRGV Round 1 Score 70" title="Joshua Hong UTSA 2026 Spring Opener UTRGV Round 1 Score 70" loading="lazy" decoding="async">
