--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ gtag('config', 'G-H1JW8YBDZ8');
           <h3 style="font-size: 22px; margin: 20px 0 8px 0; color: #0c2340; font-weight: 800; line-height: 1.2; display: flex; align-items: center; gap: 8px;">
             Military City Collegiate
             <object>
-              <a href="https://goutsa.com/2026-Military City collegiate" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
+              <a href="https://goutsa.com/2026-military-city-collegiate" target="_blank" style="display: flex; align-items: center; text-decoration: none;">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="cursor: pointer;">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                   <polyline points="15 3 21 3 21 9"></polyline>
