--- a/junior-career.html
+++ b/junior-career.html
@@ -607,7 +607,7 @@
       <img src="./images/junior-year/19-joshua-hong-Billy-Dettlaff-Sportsmanship-Award-The-Jr-Players-2024.jpeg" onclick="popupJrGallery(18)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Billy Dettlaff Sportsmanship Award The Jr Players 2024" title="Joshua Hong Billy Dettlaff Sportsmanship Award The Jr Players 2024" loading="lazy" decoding="async">
       <img src="./images/junior-year/20-joshua-hong-Nacional-Conade-Olympic-Silver-Medal-2024.jpeg" onclick="popupJrGallery(19)" style="width:100%; height:120px; object-fit:cover; object-position: center 37%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Nacional Conade Olympic Silver Medal 2024" title="Joshua Hong Nacional Conade Olympic Silver Medal 2024" loading="lazy" decoding="async">
       <img src="./images/junior-year/21-Joshua-Hong-NCJGC-Bumgadner-Memorial-Jr-Win-2023.jpeg" onclick="popupJrGallery(20)" style="width:100%; height:120px; object-fit:cover; object-position: center 42%; border-radius:8px; cursor:pointer;" alt="Joshua Hong NCJGC Bumgadner Memorial Jr Win 2023" title="Joshua Hong NCJGC Bumgadner Memorial Jr Win 2023" loading="lazy" decoding="async">
-      <img src="./images/junior-year/22-Joshua-Hong-Zona-Gado-Interzona-2024" onclick="popupJrGallery(21)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Zona GADO INTERZONA 2024" title="Joshua Hong Zona GADO INTERZONA 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/22-Joshua-Hong-Zona-Gado-Interzona-2024.jpeg" onclick="popupJrGallery(21)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Zona GADO INTERZONA 2024" title="Joshua Hong Zona GADO INTERZONA 2024" loading="lazy" decoding="async">
       <img src="./images/junior-year/23-Joshua-Hong-Selection-Mexico-Gabriel-Derbez-Lucca-Buenlostro-2025.jpeg" onclick="popupJrGallery(22)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Selection Mexico Gabriel Derbez Lucca Buenlostro 2025" title="Joshua Hong Selection Mexico Gabriel Derbez Lucca Buenlostro 2025" loading="lazy" decoding="async">
       <img src="./images/junior-year/24-Joshua-Hong-Campeonato-Pareja-Zona-Centro-Leonardo-Lavalle-2025.jpeg" onclick="popupJrGallery(23)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Campeonato Pareja Zona Centro Leonardo Lavalle 2025" title="Joshua Hong Campeonato Pareja Zona Centro Leonardo Lavalle 2025" loading="lazy" decoding="async">
 </div>
@@ -635,7 +635,7 @@
       "./images/junior-year/19-joshua-hong-Billy-Dettlaff-Sportsmanship-Award-The-Jr-Players-2024.jpeg",
       "./images/junior-year/20-joshua-hong-Nacional-Conade-Olympic-Silver-Medal-2024.jpeg",
       "./images/junior-year/21-Joshua-Hong-NCJGC-Bumgadner-Memorial-Jr-Win-2023.jpeg",
-      "./images/junior-year/22-Joshua-Hong-Zona-Gado-Interzona-2024",
+      "./images/junior-year/22-Joshua-Hong-Zona-Gado-Interzona-2024.jpeg",
       "./images/junior-year/23-Joshua-Hong-Selection-Mexico-Gabriel-Derbez-Lucca-Buenlostro-2025.jpeg",
       "./images/junior-year/24-Joshua-Hong-Campeonato-Pareja-Zona-Centro-Leonardo-Lavalle-2025.jpeg"
     ];
