--- a/junior-career.html
+++ b/junior-career.html
@@ -11,6 +11,49 @@
   <link rel="canonical" href="https://www.joshuahonggolf.com/junior-career.html">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Joshua Hong",
+  "birthDate": "2007",
+  "gender": "Male",
+  "nationality": [
+    {
+      "@type": "Country",
+      "name": "Mexico"
+    },
+    {
+      "@type": "Country",
+      "name": "South Korea"
+    }
+  ],
+  "jobTitle": "Collegiate Golfer",
+  "memberOf": {
+    "@type": "SportsTeam",
+    "name": "UTSA Men's Golf",
+    "parentOrganization": {
+      "@type": "CollegeOrUniversity",
+      "name": "University of Texas at San Antonio",
+      "abbreviation": "UTSA"
+    }
+  },
+  "description": "NCAA Division I golfer at UTSA. Two-time FMG National Junior Champion (2023-2025) and three-time consecutive Regional Champion across Zona GADO and Zona Centro.",
+  "award": [
+    "FMG National Junior Championship Winner (2023-2024 Season)",
+    "FMG National Junior Championship Winner (2024-2025 Season)",
+    "Zona GADO Regional Season Champion (2021-2022)",
+    "Zona GADO Regional Season Champion (2022-2023)",
+    "Zona Centro Regional Season Champion (2024-2025)",
+    "Billy Dettlaff Sportsmanship Award (The Junior Players Championship)"
+  ],
+  "knowsAbout": ["Competitive Golf", "NCAA Division I Athletics"],
+  "url": "https://joshuahonggolf.com"
+}
+</script>
+
+  
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
