--- a/index.html
+++ b/index.html
@@ -1490,20 +1490,17 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 
 
 
-<div class="footer-section" style="max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="footer-section" style="max-width: 900px; margin: 0 auto; padding: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <div style="padding: 30px 25px; background: #ffffff; border-radius: 25px; border: 1px solid #e2e8f0; box-shadow: 0 10px 30px rgba(0,0,0,0.04); box-sizing: border-box; margin-bottom: 40px;">
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="background: #4285F4; width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 14px; color: white; box-shadow: 0 4px 10px rgba(66,133,244,0.3);">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-      <rect x="3" y="11" width="18" height="10" rx="2"></rect>
-      <circle cx="12" cy="5" r="2"></circle>
-      <path d="M12 7v4"></path>
-      <line x1="8" y1="16" x2="8" y2="16"></line>
-      <line x1="16" y1="16" x2="16" y2="16"></line>
-    </svg>
+  <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+  <circle cx="12" cy="7" r="4"></circle>
+</svg>
   </div>
-  <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">AI-Powered Profile Overview</h3>
+  <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">Profile Overview</h3>
 </div>
     
 <div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
