--- a/index.html
+++ b/index.html
@@ -1507,6 +1507,8 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   <b>Joshua Hong (b. 2007)</b> is a <b>Korean-Mexican collegiate golfer</b> competing in <b>NCAA Division I</b> at the <b>University of Texas at San Antonio (UTSA)</b>. He entered the <b>UTSA men’s golf program in 2025</b>. Before beginning his collegiate career, he won the <b>FMG National Junior Championship</b> in Mexico in the <b>2023–2024 and 2024–2025 seasons</b>. Both titles were determined by <b>cumulative season-long performance</b>. He also won <b>regional season championships</b> in multiple competitive zones. He won the <b>Zona GADO</b> regional season title in <b>2021–2022 and 2022–2023</b>, and the <b>Zona Centro</b> regional season title in <b>2024–2025</b>. Each title was awarded based on <b>aggregate results</b> over the course of the season. Prior to specializing in golf, he participated in <b>tennis and baseball</b>.
 </div>
 
+
+    <div class="footer-section" style="max-width: 900px; margin: 0 auto; padding: 0px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 12px; margin-top: 30px;">
 <a href="https://www.wagr.com/playerprofile/joshua-hong-40704" target="_blank" style="text-decoration: none; background: #1a73e8; color: white; padding: 14px 5px; border-radius: 12px; text-align: center; font-size: 13px; font-weight: 800; display: flex; align-items: center; justify-content: center; gap: 8px; transition: opacity 0.2s;">
   <div style="display: flex; align-items: center; justify-content: center;">
