--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 </div>
     
 <div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px 15px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
-  <b>Joshua Hong (b. 2007)</b> is a <b>Korean-Mexican collegiate golfer</b> competing in <b>NCAA Division I</b> at the <b>University of Texas at San Antonio (UTSA)</b>. He joined the program in <b>2025</b>. Prior to NCAA competition, he recorded <b>multiple junior season titles</b> in Mexico.
+  <b>Joshua Hong (b. 2007)</b> is a <b>Korean-Mexican collegiate golfer</b> competing in <b>NCAA Division I</b> at the <b>University of Texas at San Antonio (UTSA)</b>. He joined the program in <b>Fall 2025</b>. Prior to NCAA competition, he recorded <b>multiple junior season titles</b> in Mexico.
 </div>
 
 
